lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> statement POINT statements
Rule 4     statements -> empty_statement
Rule 5     empty_statement -> <empty>
Rule 6     statement -> SAI CHE EQUALS variable AS params HEY statements OH
Rule 7     statement -> function_invoke
Rule 8     expression -> function_invoke
Rule 9     function_invoke -> CALL variable CHE EQUALS params_actual EXCLAMATION_MARK
Rule 10    params -> variable AND params
Rule 11    params -> variable
Rule 12    params -> EMPTY_PARAM
Rule 13    params_actual -> expression AND params_actual
Rule 14    params_actual -> expression
Rule 15    params_actual -> EMPTY_PARAM
Rule 16    statement -> RETURN expression
Rule 17    statement -> variable EQUALS expression
Rule 18    statement -> boolean_expression QUESTION_MARK statements HEY
Rule 19    statement -> WHILE boolean_expression DO statements HEY
Rule 20    statement -> boolean_expression QUESTION_MARK statements ELSE statements HEY
Rule 21    boolean_expression -> expression COMPARISON expression
Rule 22    boolean_expression -> expression MINOR expression
Rule 23    boolean_expression -> expression MAJOR expression
Rule 24    boolean_expression -> expression NOT COMPARISON expression
Rule 25    boolean_expression -> expression NOT MINOR expression
Rule 26    boolean_expression -> expression NOT MAJOR expression
Rule 27    boolean_expression -> boolean_expression AND boolean_expression
Rule 28    boolean_expression -> boolean_expression OR boolean_expression
Rule 29    expression -> DQUOTE variable DQUOTE
Rule 30    statement -> PRINT expression
Rule 31    expression -> STRING_CAST variable
Rule 32    expression -> MINUS statement
Rule 33    boolean_expression -> TRUE
Rule 34    boolean_expression -> FALSE
Rule 35    expression -> boolean_expression
Rule 36    expression -> numbers
Rule 37    numbers -> DRUG NUMBER
Rule 38    expression -> expression PLUS expression
Rule 39    expression -> expression MINUS expression
Rule 40    expression -> expression TIMES expression
Rule 41    expression -> expression DIVIDE expression
Rule 42    expression -> expression MODULE expression
Rule 43    expression -> variable
Rule 44    variable -> names
Rule 45    variable -> names END_LINE
Rule 46    names -> NAME names
Rule 47    names -> <empty>

Terminals, with rules where they appear

AND                  : 10 13 27
AS                   : 6
CALL                 : 9
CHE                  : 6 9
COMPARISON           : 21 24
DIVIDE               : 41
DO                   : 19
DQUOTE               : 29 29
DRUG                 : 37
ELSE                 : 20
EMPTY_PARAM          : 12 15
END_LINE             : 45
EQUALS               : 6 9 17
EXCLAMATION_MARK     : 9
FALSE                : 34
HEY                  : 6 18 19 20
MAJOR                : 23 26
MINOR                : 22 25
MINUS                : 32 39
MODULE               : 42
NAME                 : 46
NOT                  : 24 25 26
NUMBER               : 37
OH                   : 6
OR                   : 28
PLUS                 : 38
POINT                : 3
PRINT                : 30
QUESTION_MARK        : 18 20
RETURN               : 16
SAI                  : 6
SPACE                : 
STRING_CAST          : 31
TIMES                : 40
TRUE                 : 33
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

boolean_expression   : 18 19 20 27 27 28 28 35
empty_statement      : 4
expression           : 13 14 16 17 21 21 22 22 23 23 24 24 25 25 26 26 30 38 38 39 39 40 40 41 41 42 42
function_invoke      : 7 8
names                : 44 45 46
numbers              : 36
params               : 6 10
params_actual        : 9 13
program              : 0
statement            : 2 3 32
statements           : 1 2 3 6 18 19 20 20
variable             : 6 9 10 11 17 29 31 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> . statement POINT statements
    (4) statements -> . empty_statement
    (6) statement -> . SAI CHE EQUALS variable AS params HEY statements OH
    (7) statement -> . function_invoke
    (16) statement -> . RETURN expression
    (17) statement -> . variable EQUALS expression
    (18) statement -> . boolean_expression QUESTION_MARK statements HEY
    (19) statement -> . WHILE boolean_expression DO statements HEY
    (20) statement -> . boolean_expression QUESTION_MARK statements ELSE statements HEY
    (30) statement -> . PRINT expression
    (5) empty_statement -> .
    (9) function_invoke -> . CALL variable CHE EQUALS params_actual EXCLAMATION_MARK
    (44) variable -> . names
    (45) variable -> . names END_LINE
    (21) boolean_expression -> . expression COMPARISON expression
    (22) boolean_expression -> . expression MINOR expression
    (23) boolean_expression -> . expression MAJOR expression
    (24) boolean_expression -> . expression NOT COMPARISON expression
    (25) boolean_expression -> . expression NOT MINOR expression
    (26) boolean_expression -> . expression NOT MAJOR expression
    (27) boolean_expression -> . boolean_expression AND boolean_expression
    (28) boolean_expression -> . boolean_expression OR boolean_expression
    (33) boolean_expression -> . TRUE
    (34) boolean_expression -> . FALSE
    (46) names -> . NAME names
    (47) names -> .
    (8) expression -> . function_invoke
    (29) expression -> . DQUOTE variable DQUOTE
    (31) expression -> . STRING_CAST variable
    (32) expression -> . MINUS statement
    (35) expression -> . boolean_expression
    (36) expression -> . numbers
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . variable
    (37) numbers -> . DRUG NUMBER

  ! shift/reduce conflict for MINUS resolved as shift
    SAI             shift and go to state 5
    RETURN          shift and go to state 8
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12
    $end            reduce using rule 5 (empty_statement -> .)
    CALL            shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    NAME            shift and go to state 17
    END_LINE        reduce using rule 47 (names -> .)
    EQUALS          reduce using rule 47 (names -> .)
    COMPARISON      reduce using rule 47 (names -> .)
    MINOR           reduce using rule 47 (names -> .)
    MAJOR           reduce using rule 47 (names -> .)
    NOT             reduce using rule 47 (names -> .)
    PLUS            reduce using rule 47 (names -> .)
    TIMES           reduce using rule 47 (names -> .)
    DIVIDE          reduce using rule 47 (names -> .)
    MODULE          reduce using rule 47 (names -> .)
    DQUOTE          shift and go to state 18
    STRING_CAST     shift and go to state 19
    MINUS           shift and go to state 20
    DRUG            shift and go to state 22

  ! MINUS           [ reduce using rule 47 (names -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty_statement                shift and go to state 4
    variable                       shift and go to state 6
    function_invoke                shift and go to state 7
    expression                     shift and go to state 9
    boolean_expression             shift and go to state 10
    names                          shift and go to state 14
    numbers                        shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (3) statements -> statement . POINT statements
    (2) statements -> . statement statements
    (3) statements -> . statement POINT statements
    (4) statements -> . empty_statement
    (6) statement -> . SAI CHE EQUALS variable AS params HEY statements OH
    (7) statement -> . function_invoke
    (16) statement -> . RETURN expression
    (17) statement -> . variable EQUALS expression
    (18) statement -> . boolean_expression QUESTION_MARK statements HEY
    (19) statement -> . WHILE boolean_expression DO statements HEY
    (20) statement -> . boolean_expression QUESTION_MARK statements ELSE statements HEY
    (30) statement -> . PRINT expression
    (5) empty_statement -> .
    (9) function_invoke -> . CALL variable CHE EQUALS params_actual EXCLAMATION_MARK
    (44) variable -> . names
    (45) variable -> . names END_LINE
    (21) boolean_expression -> . expression COMPARISON expression
    (22) boolean_expression -> . expression MINOR expression
    (23) boolean_expression -> . expression MAJOR expression
    (24) boolean_expression -> . expression NOT COMPARISON expression
    (25) boolean_expression -> . expression NOT MINOR expression
    (26) boolean_expression -> . expression NOT MAJOR expression
    (27) boolean_expression -> . boolean_expression AND boolean_expression
    (28) boolean_expression -> . boolean_expression OR boolean_expression
    (33) boolean_expression -> . TRUE
    (34) boolean_expression -> . FALSE
    (46) names -> . NAME names
    (47) names -> .
    (8) expression -> . function_invoke
    (29) expression -> . DQUOTE variable DQUOTE
    (31) expression -> . STRING_CAST variable
    (32) expression -> . MINUS statement
    (35) expression -> . boolean_expression
    (36) expression -> . numbers
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . variable
    (37) numbers -> . DRUG NUMBER

  ! shift/reduce conflict for MINUS resolved as shift
    POINT           shift and go to state 24
    SAI             shift and go to state 5
    RETURN          shift and go to state 8
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12
    $end            reduce using rule 5 (empty_statement -> .)
    HEY             reduce using rule 5 (empty_statement -> .)
    ELSE            reduce using rule 5 (empty_statement -> .)
    OH              reduce using rule 5 (empty_statement -> .)
    CALL            shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    NAME            shift and go to state 17
    END_LINE        reduce using rule 47 (names -> .)
    EQUALS          reduce using rule 47 (names -> .)
    COMPARISON      reduce using rule 47 (names -> .)
    MINOR           reduce using rule 47 (names -> .)
    MAJOR           reduce using rule 47 (names -> .)
    NOT             reduce using rule 47 (names -> .)
    PLUS            reduce using rule 47 (names -> .)
    TIMES           reduce using rule 47 (names -> .)
    DIVIDE          reduce using rule 47 (names -> .)
    MODULE          reduce using rule 47 (names -> .)
    DQUOTE          shift and go to state 18
    STRING_CAST     shift and go to state 19
    MINUS           shift and go to state 20
    DRUG            shift and go to state 22

  ! MINUS           [ reduce using rule 47 (names -> .) ]

    statement                      shift and go to state 3
    statements                     shift and go to state 23
    empty_statement                shift and go to state 4
    variable                       shift and go to state 6
    function_invoke                shift and go to state 7
    expression                     shift and go to state 9
    boolean_expression             shift and go to state 10
    names                          shift and go to state 14
    numbers                        shift and go to state 21

state 4

    (4) statements -> empty_statement .

    $end            reduce using rule 4 (statements -> empty_statement .)
    HEY             reduce using rule 4 (statements -> empty_statement .)
    ELSE            reduce using rule 4 (statements -> empty_statement .)
    OH              reduce using rule 4 (statements -> empty_statement .)


state 5

    (6) statement -> SAI . CHE EQUALS variable AS params HEY statements OH

    CHE             shift and go to state 25


state 6

    (17) statement -> variable . EQUALS expression
    (43) expression -> variable .

    EQUALS          shift and go to state 26
    COMPARISON      reduce using rule 43 (expression -> variable .)
    MINOR           reduce using rule 43 (expression -> variable .)
    MAJOR           reduce using rule 43 (expression -> variable .)
    NOT             reduce using rule 43 (expression -> variable .)
    PLUS            reduce using rule 43 (expression -> variable .)
    MINUS           reduce using rule 43 (expression -> variable .)
    TIMES           reduce using rule 43 (expression -> variable .)
    DIVIDE          reduce using rule 43 (expression -> variable .)
    MODULE          reduce using rule 43 (expression -> variable .)


state 7

    (7) statement -> function_invoke .
    (8) expression -> function_invoke .

  ! reduce/reduce conflict for COMPARISON resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for MINOR resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for MAJOR resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for NOT resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for PLUS resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for MINUS resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for TIMES resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 7 (statement -> function_invoke .)
  ! reduce/reduce conflict for MODULE resolved using rule 7 (statement -> function_invoke .)
    POINT           reduce using rule 7 (statement -> function_invoke .)
    SAI             reduce using rule 7 (statement -> function_invoke .)
    RETURN          reduce using rule 7 (statement -> function_invoke .)
    WHILE           reduce using rule 7 (statement -> function_invoke .)
    PRINT           reduce using rule 7 (statement -> function_invoke .)
    CALL            reduce using rule 7 (statement -> function_invoke .)
    TRUE            reduce using rule 7 (statement -> function_invoke .)
    FALSE           reduce using rule 7 (statement -> function_invoke .)
    NAME            reduce using rule 7 (statement -> function_invoke .)
    DQUOTE          reduce using rule 7 (statement -> function_invoke .)
    STRING_CAST     reduce using rule 7 (statement -> function_invoke .)
    MINUS           reduce using rule 7 (statement -> function_invoke .)
    DRUG            reduce using rule 7 (statement -> function_invoke .)
    EQUALS          reduce using rule 7 (statement -> function_invoke .)
    END_LINE        reduce using rule 7 (statement -> function_invoke .)
    COMPARISON      reduce using rule 7 (statement -> function_invoke .)
    MINOR           reduce using rule 7 (statement -> function_invoke .)
    MAJOR           reduce using rule 7 (statement -> function_invoke .)
    NOT             reduce using rule 7 (statement -> function_invoke .)
    PLUS            reduce using rule 7 (statement -> function_invoke .)
    TIMES           reduce using rule 7 (statement -> function_invoke .)
    DIVIDE          reduce using rule 7 (statement -> function_invoke .)
    MODULE          reduce using rule 7 (statement -> function_invoke .)
    $end            reduce using rule 7 (statement -> function_invoke .)
    HEY             reduce using rule 7 (statement -> function_invoke .)
    ELSE            reduce using rule 7 (statement -> function_invoke .)
    OH              reduce using rule 7 (statement -> function_invoke .)
    QUESTION_MARK   reduce using rule 7 (statement -> function_invoke .)
    AND             reduce using rule 7 (statement -> function_invoke .)
    OR              reduce using rule 7 (statement -> function_invoke .)
    DO              reduce using rule 7 (statement -> function_invoke .)
    EXCLAMATION_MARK reduce using rule 7 (statement -> function_invoke .)

  ! COMPARISON      [ reduce using rule 8 (expression -> function_invoke .) ]
  ! MINOR           [ reduce using rule 8 (expression -> function_invoke .) ]
  ! MAJOR           [ reduce using rule 8 (expression -> function_invoke .) ]
  ! NOT             [ reduce using rule 8 (expression -> function_invoke .) ]
  ! PLUS            [ reduce using rule 8 (expression -> function_invoke .) ]
  ! MINUS           [ reduce using rule 8 (expression -> function_invoke .) ]
  ! TIMES           [ reduce using rule 8 (expression -> function_invoke .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> function_invoke .) ]
  ! MODULE          [ reduce using rule 8 (expression -> function_invoke .) ]


state 8

    (16) statement -> RETURN . expression
    (8) expression -> . function_invoke
    (29) expression -> . DQUOTE variable DQUOTE
    (31) expression -> . STRING_CAST variable
    (32) expression -> . MINUS statement
    (35) expression -> . boolean_expression
    (36) expression -> . numbers
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . variable
    (9) function_invoke -> . CALL variable CHE EQUALS params_actual EXCLAMATION_MARK
    (21) boolean_expression -> . expression COMPARISON expression
    (22) boolean_expression -> . expression MINOR expression
    (23) boolean_expression -> . expression MAJOR expression
    (24) boolean_expression -> . expression NOT COMPARISON expression
    (25) boolean_expression -> . expression NOT MINOR expression
    (26) boolean_expression -> . expression NOT MAJOR expression
    (27) boolean_expression -> . boolean_expression AND boolean_expression
    (28) boolean_expression -> . boolean_expression OR boolean_expression
    (33) boolean_expression -> . TRUE
    (34) boolean_expression -> . FALSE
    (37) numbers -> . DRUG NUMBER
    (44) variable -> . names
    (45) variable -> . names END_LINE
    (46) names -> . NAME names
    (47) names -> .

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for DQUOTE resolved as shift
  ! shift/reduce conflict for STRING_CAST resolved as shift
  ! shift/reduce conflict for DRUG resolved as shift
    DQUOTE          shift and go to state 18
    STRING_CAST     shift and go to state 19
    MINUS           shift and go to state 20
    CALL            shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    DRUG            shift and go to state 22
    NAME            shift and go to state 17
    END_LINE        reduce using rule 47 (names -> .)
    PLUS            reduce using rule 47 (names -> .)
    TIMES           reduce using rule 47 (names -> .)
    DIVIDE          reduce using rule 47 (names -> .)
    MODULE          reduce using rule 47 (names -> .)
    COMPARISON      reduce using rule 47 (names -> .)
    MINOR           reduce using rule 47 (names -> .)
    MAJOR           reduce using rule 47 (names -> .)
    NOT             reduce using rule 47 (names -> .)
    POINT           reduce using rule 47 (names -> .)
    SAI             reduce using rule 47 (names -> .)
    RETURN          reduce using rule 47 (names -> .)
    WHILE           reduce using rule 47 (names -> .)
    PRINT           reduce using rule 47 (names -> .)
    EQUALS          reduce using rule 47 (names -> .)
    $end            reduce using rule 47 (names -> .)
    HEY             reduce using rule 47 (names -> .)
    ELSE            reduce using rule 47 (names -> .)
    OH              reduce using rule 47 (names -> .)
    QUESTION_MARK   reduce using rule 47 (names -> .)
    AND             reduce using rule 47 (names -> .)
    OR              reduce using rule 47 (names -> .)
    DO              reduce using rule 47 (names -> .)
    EXCLAMATION_MARK reduce using rule 47 (names -> .)

  ! MINUS           [ reduce using rule 47 (names -> .) ]
  ! CALL            [ reduce using rule 47 (names -> .) ]
  ! TRUE            [ reduce using rule 47 (names -> .) ]
  ! FALSE           [ reduce using rule 47 (names -> .) ]
  ! NAME            [ reduce using rule 47 (names -> .) ]
  ! DQUOTE          [ reduce using rule 47 (names -> .) ]
  ! STRING_CAST     [ reduce using rule 47 (names -> .) ]
  ! DRUG            [ reduce using rule 47 (names -> .) ]

    expression                     shift and go to state 27
    function_invoke                shift and go to state 28
    variable                       shift and go to state 29
    boolean_expression             shift and go to state 30
    numbers                        shift and go to state 21
    names                          shift and go to state 14

state 9

    (21) boolean_expression -> expression . COMPARISON expression
    (22) boolean_expression -> expression . MINOR expression
    (23) boolean_expression -> expression . MAJOR expression
    (24) boolean_expression -> expression . NOT COMPARISON expression
    (25) boolean_expression -> expression . NOT MINOR expression
    (26) boolean_expression -> expression . NOT MAJOR expression
    (38) expression -> expression . PLUS expression
    (39) expression -> expression . MINUS expression
    (40) expression -> expression . TIMES expression
    (41) expression -> expression . DIVIDE expression
    (42) expression -> expression . MODULE expression

    COMPARISON      shift and go to state 31
    MINOR           shift and go to state 32
    MAJOR           shift and go to state 33
    NOT             shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULE          shift and go to state 39


state 10

    (18) statement -> boolean_expression . QUESTION_MARK statements HEY
    (20) statement -> boolean_expression . QUESTION_MARK statements ELSE statements HEY
    (27) boolean_expression -> boolean_expression . AND boolean_expression
    (28) boolean_expression -> boolean_expression . OR boolean_expression
    (35) expression -> boolean_expression .

    QUESTION_MARK   shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42
    COMPARISON      reduce using rule 35 (expression -> boolean_expression .)
    MINOR           reduce using rule 35 (expression -> boolean_expression .)
    MAJOR           reduce using rule 35 (expression -> boolean_expression .)
    NOT             reduce using rule 35 (expression -> boolean_expression .)
    PLUS            reduce using rule 35 (expression -> boolean_expression .)
    MINUS           reduce using rule 35 (expression -> boolean_expression .)
    TIMES           reduce using rule 35 (expression -> boolean_expression .)
    DIVIDE          reduce using rule 35 (expression -> boolean_expression .)
    MODULE          reduce using rule 35 (expression -> boolean_expression .)


state 11

    (19) statement -> WHILE . boolean_expression DO statements HEY
    (21) boolean_expression -> . expression COMPARISON expression
    (22) boolean_expression -> . expression MINOR expression
    (23) boolean_expression -> . expression MAJOR expression
    (24) boolean_expression -> . expression NOT COMPARISON expression
    (25) boolean_expression -> . expression NOT MINOR expression
    (26) boolean_expression -> . expression NOT MAJOR expression
    (27) boolean_expression -> . boolean_expression AND boolean_expression
    (28) boolean_expression -> . boolean_expression OR boolean_expression
    (33) boolean_expression -> . TRUE
    (34) boolean_expression -> . FALSE
    (8) expression -> . function_invoke
    (29) expression -> . DQUOTE variable DQUOTE
    (31) expression -> . STRING_CAST variable
    (32) expression -> . MINUS statement
    (35) expression -> . boolean_expression
    (36) expression -> . numbers
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . variable
    (9) function_invoke -> . CALL variable CHE EQUALS params_actual EXCLAMATION_MARK
    (37) numbers -> . DRUG NUMBER
    (44) variable -> . names
    (45) variable -> . names END_LINE
    (46) names -> . NAME names
    (47) names -> .

  ! shift/reduce conflict for MINUS resolved as shift
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    DQUOTE          shift and go to state 18
    STRING_CAST     shift and go to state 19
    MINUS           shift and go to state 20
    CALL            shift and go to state 13
    DRUG            shift and go to state 22
    NAME            shift and go to state 17
    END_LINE        reduce using rule 47 (names -> .)
    COMPARISON      reduce using rule 47 (names -> .)
    MINOR           reduce using rule 47 (names -> .)
    MAJOR           reduce using rule 47 (names -> .)
    NOT             reduce using rule 47 (names -> .)
    PLUS            reduce using rule 47 (names -> .)
    TIMES           reduce using rule 47 (names -> .)
    DIVIDE          reduce using rule 47 (names -> .)
    MODULE          reduce using rule 47 (names -> .)

  ! MINUS           [ reduce using rule 47 (names -> .) ]

    boolean_expression             shift and go to state 43
    expression                     shift and go to state 9
    function_invoke                shift and go to state 28
    variable                       shift and go to state 29
    numbers                        shift and go to state 21
    names                          shift and go to state 14

state 12
